# s2n-tls-ffi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  s2n-tls-ffi.cabal  s2n-tls-sys.cabal
cbits/: s2n_wrapper.c  s2n_wrapper.h
src/S2nTls/: Ffi.hs  Sys.hs
src/S2nTls/Ffi/: Types.hs
src/S2nTls/Sys/: Dynamic.hs  Linked.hs  Types.hs
test/: MemorySafety.hs
