cabal-version:      3.0
name:               s2n-tls-sys
version:            0.1.0.0
synopsis:           Low-level FFI bindings to the s2n-tls library
description:
    This package provides low-level FFI bindings to the s2n-tls library.
    It follows the Rust convention of "sys" packages that provide raw
    bindings which higher-level packages can build upon.
    .
    Use @withLinkedTlsSys@ to load symbols from an already-linked library,
    or @withDynamicTlsSys@ to load the library at runtime via dlopen.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Goertzen
maintainer:         daniel.goertzen@gmail.com
category:           Cryptography, FFI
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:
        S2nTls.Sys
        S2nTls.Sys.Types
        S2nTls.Sys.Linked
        S2nTls.Sys.Dynamic

    build-depends:
        base >= 4.14 && < 5
      , unix >= 2.7

    hs-source-dirs:   src
    default-language: GHC2021

    -- C wrapper for capturing error info from thread-local storage
    c-sources:        cbits/s2n_wrapper.c
    include-dirs:     cbits

    -- Required for withLinkedTlsSys (symbols loaded via dlopen(NULL))
    extra-libraries:  s2n

test-suite memory-safety
    type:             exitcode-stdio-1.0
    main-is:          MemorySafety.hs
    hs-source-dirs:   test
    default-language: GHC2021
    build-depends:
        base >= 4.14 && < 5
      , s2n-tls-sys
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
